 
!! warrning !! dont open this file with WINDOWS notepad !!

 

[ ] not yet
[-] will be ignored, or to be done at next release
[x] done


1.5.2 - version : 
[x] Add Persian language (thanx for dverbame)
[x] Fix bug with thumbs size (reported by : Tony Broomfield)
[x] fix bug where Last visit in ACP doesnt use Kleeja zone (reborted by: Bader_vip)
[x] fix bug where total files number excludes images (reborted by: Bader_vip)
[x] fix bug where guests can not access user folders, ucp.php?go=fileuser&id=[userid] (reported by: ibragate)
[x] fix bug where kleeja doesnt respect decoding type when it set to nothing (reported by: althani)
[x] fix security issue .. 
[x] Username at registering now should be between 4 to 25 characters (reported by ibragate)
[x] fix bug where user can not open other page while uploading files (reported by gulfup.com)
[x] faster home page with new inproved javascript tabs
[x] Juqery.js library is included offically with Kleeja now


1.5.1 - version : 
[x] Fix bug with uploading from URL.
[x] Fix bug in SQL when reparing tables.
[x] FIx bug where function is miswritten [helper_thumb_imagick]
[x] Fix unclear halt at install.php file 



------------ BE CAREFUL! .. AFTER THIS LINE YOU WILL TRAVEL THROUGH THE TIME TO THE FUTURE f=0--->f++
1.7 - version (---- NOT YET ---):
-[-] Security situation page 
-[-] files ACP -> search files from this IP,user
-[-] Dealing with the huge invasion of Nginx
-[-] Add phrases from within ACP, (show how to embed them in template ?), fix bug with pages there too
-[-] Mobile style, see admin/mobile [ related files common.php+admin/index.php ] { to test it, add define('IN_MOBILE', 1); to config.php } 
-[x] filters at images & files (same db tables for searchs !)
	-[-] filters at images.
	-[-] filters at files.
	-[x] convert searches to use filters and show last 10 ones.
-[-] files of deleted user shows as 'deleted' user or 'guest' 
-[-] remove last_file code from files and sql .. 