@@ -18,9 +18,10 @@
 [x] fix security issue .. 
 [x] Username at registering now should be between 4 to 25 characters (reported by ibragate)
 [x] fix bug where user can not open other page while uploading files (reported by gulfup.com)
-[x] faster home page with new inproved javascript tabs
+[x] faster home page with new improved javascript tabs
 [x] Juqery.js library is included offically with Kleeja now
-
+[x] fix bug when there is no file and request thumbf=..., it shows txt error instead of image error.
+[x] good look of images at userfile while loading instead of just white spaces. 
 
 1.5.1 - version : 
 [x] Fix bug with uploading from URL.
